# depdiff

./: .pre-commit-config.yaml  AGENTS.md  PLAN.md  TESTING_PLAN.md  main.py  pyproject.toml  snapshot_report.html
.github/workflows/: ci.yml
depdiff/: comparator.py  models.py  parser.py  reporter.py  retriever.py
src/depdiff/: __init__.py  comparator.py  orchestrator.py  parallel.py  parser.py  reporter.py  retriever.py  tui.py  types.py
src/depdiff/pypi/: metadata.py
tests/: conftest.py  test_localstack_diff.py
tests/comparator/: test_comparator.py
tests/orchestrator/: test_orchestrator.py
tests/orchestrator/cassettes/test_orchestrator/: TestDependencyDiffOrchestrator.test_integration_real_package.yaml
tests/parser/: test_parser.py
tests/parser/examples/: 1.txt
tests/pypi/metadata/: test_client.py
tests/pypi/metadata/cassettes/test_client/: test_requests.yaml
tests/reporter/: test_reporter.py
tests/retriever/: test_artifact.py  test_git.py
tests/retriever/cassettes/test_artifact/: TestArtifactFallback.test_artifact_fallback_real_package.yaml  TestDownloadArtifact.test_download_sdist.yaml  TestGetDiff.test_get_diff_integration.yaml
tests/tui/: test_tui.py
tests/tui/__snapshots__/test_tui/: TestSnapshots.test_empty_diff.raw  TestSnapshots.test_initial_render.raw  TestSnapshots.test_navigation_down.raw  TestSnapshots.test_with_large_diff.raw
