[project]
name = "depdiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"
