[project]
name = "depdiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
    "textual>=7.0.3",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-recording>=0.13.4",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ["-n", "auto", "--block-network"]
